8274235: -Xshare:dump should not call vm_direct_exit

Reviewed-by: iklam, dholmes